--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,9 @@
     </button>
     <div
       [ngClass]="
-        isShowLink ? 'collapse navbar-collapse show' : 'collapse navbar-collapse'
+        isShowLink
+          ? 'collapse navbar-collapse show'
+          : 'collapse navbar-collapse'
       "
       id="navbarScroll"
     >
@@ -23,11 +25,7 @@
         style="--bs-scroll-height: 100px"
       >
         <li class="nav-item">
-          <a
-            class="nav-link"
-            aria-current="page"
-            href="#"
-            (click)="onSelect('recipes')"
+          <a class="nav-link" aria-current="page" routerLink="/recipes"
             >Recipes</a
           >
         </li>
@@ -35,8 +33,7 @@
           <a
             class="nav-link"
             aria-current="page"
-            href="#"
-            (click)="onSelect('shopping-list')"
+            routerLink="/shopping-list"
             >Shopping List</a
           >
         </li>
@@ -48,13 +45,12 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
-            href="#"
+           
             id="navbarScrollingDropdown"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
-            (click)="openDropDown()"
-            
+            (click)=" openDropDown()"
           >
             Manage
           </a>
@@ -63,10 +59,9 @@
             appDropdown
             aria-labelledby="navbarScrollingDropdown"
             data-bs-popper="none"
-            
           >
-            <li><a class="dropdown-item" href="#">Save Data</a></li>
-            <li><a class="dropdown-item" href="#">Fetch Dats</a></li>
+            <li><a class="dropdown-item"  (click)=" openDropDown()">Save Data</a></li>
+            <li><a class="dropdown-item" (click)=" openDropDown()">Fetch Dats</a></li>
           </ul>
         </li>
       </ul>
