--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item list-group-item-action" style="height:100px" (click)="onSelected()" >
+<a  [routerLink]="[index]" class="list-group-item list-group-item-action" style="height:100px" >
   <div class="float-start">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
