--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,15 +1,10 @@
 <div class="row">
-  <div class="col-md-5">
+  <div class="col-5">
     <app-recipe-list
      
     ></app-recipe-list>
   </div>
-  <div class="col-md-7">
-    <app-recipe-detail [recipe]="selectedRecipe"
-      *ngIf="selectedRecipe; else infoText"
-    ></app-recipe-detail>
-    <ng-template #infoText>
-      <p>Please select recipe</p>
-    </ng-template>
+  <div class="col-7">
+    <router-outlet></router-outlet>
   </div>
 </div>
