--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,88 @@
-<p>recipe-edit works!</p>
+<div class="row">
+  <div class="col-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-12">
+          <button type="submit" class="btn btn-success m-1" [disabled]="!recipeForm.valid">
+            Save
+          </button>
+          <button class="btn btn-danger m-1" (click)="onCancel()">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 form-group">
+          <label for="name">Name</label>
+          <input
+            type="text"
+            id="name"
+            class="form-control"
+            formControlName="name"
+            name="name"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 form-group">
+          <label for="imgURL">Image URL</label>
+          <input
+            type="text"
+            id="imgURL"
+            class="form-control"
+            name="imgURL"
+            formControlName="imgURL"
+            #imagePath
+          />
+        </div>
+      </div>
+       <div class="row">
+        <div class="col-xs-12">
+          <img style="max-height: 300px;" [src]="imagePath.value" class="img-responsive">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 form-group">
+          <label for="description">Description </label>
+          <textarea
+            id="description"
+            class="form-control"
+            name="description"
+            formControlName="description"
+          ></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12" formArrayName="ingredients">
+          <div
+            class="row"
+            *ngFor="let ingredientCtrl of ingredients.controls; index as i"
+            [formGroupName]="i"
+            style="margin-top: 10px"
+          >
+            <div class="col-8">
+              <input type="text" formControlName="name" class="form-control" />
+            </div>
+            <div class="col-3">
+              <input
+                type="number"
+                formControlName="amount"
+                class="form-control"
+              />
+            </div>
+            <div class="col-1">
+              <div class="btn btn-danger m-1"  (click)="onDeleteIngredient(i)">X</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col-12">
+          <button class="btn btn-success" type="button" (click)="addOnIngredient()">
+            Add Ingredient
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
